--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <table>
                 <td>
                     <tr>
-                        <h4 style="color: #ed595c;">Diploma</h4>
+                        <h4 style="color: #ed595c;">Diploma </br> Acharya Polytechnic</h4>
                     </tr>
                 </td>
                 <td>
