--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                 <td>
                     <tr>
                         <h5>HTML ⭐⭐⭐⭐ </br>
+                        Bootstrap ⭐⭐⭐⭐</br>
                             CSS ⭐⭐⭐</br>
                             PHP ⭐⭐ </br>
                         </h5>
@@ -208,7 +209,7 @@
                 2.troubleshooting the Length and Deplete Sensor</ul>
             <h5> Work Experience</h5>
             </br>
-            <h4 style="color: #ed595c;">INFOHEAL TECHNOLOGIES (SEP/2019-MAR/2020)</h4>
+            <h4 style="color: #ed595c;">INFOHEAL TECHNOLOGIES (SEP/2019-JUN/2020)</h4>
             <h4 style="color: #ed595c;">WEB DEVELOPER</h4>
             <h3>
                 <ul>
